# hoteler-web-react

./: .bazelrc  .dockerignore  .env.exmaple  .eslintignore  .eslintrc.js  .gitignore  .npmrc  BUILD.bazel  Dockerfile  README.md  WORKSPACE  _redirects  app.yaml  commitlint.config.js  index.html  lint-staged.config.js  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  rspack.config.js  tsconfig.json  vite.config.mts
.aspect/bazelrc/: BUILD.bazel
.github/: dependabot.yml
.github/workflows/: ci.yaml
.husky/: pre-commit
public/: _redirects  index.html  manifest.json
scripts/: build-docker.ps1  build-docker.sh
src/: App.test.tsx  App.tsx  BUILD.bazel  Router.tsx  index.tsx  providers.tsx  setupProxy.js  store.ts  theme.ts
src/atom/: SidebarAtom.ts  index.ts
src/components/: AddCustomerRoomModal.tsx  ConfirmModal.tsx  CreateCustomerModal.tsx  CreateRoomModal.tsx  CreateUserModal.tsx  CustomerCard.tsx  DomConfett.tsx  EditCustomerModal.tsx  EditRoomModal.tsx  ErrorBoundary.tsx  ErrorCode.tsx  FoldingCube.tsx  GithubIcon.tsx  GlobalLoading.tsx  Layout.tsx  Loading.tsx  Login.tsx  NavItem.tsx  Navbar.tsx  Navgation.tsx  PasswordInput.tsx  ProtectRoute.tsx  RoomCard.tsx  RoomCardSkeleton.tsx  RouterLink.tsx  Sidebar.tsx  UserProfile.tsx  WithSuspense.tsx
src/components/Apexcharts/: ApexTypes.ts  ReactApexcharts.tsx  index.ts
src/components/Layout/: CommonLayout.tsx  LoginLayout.tsx  index.tsx
src/hooks/: useAxios.ts  useSystemColorMode.ts
src/lib/: date.ts  index.ts  request.ts  route.ts  toast.ts
src/pages/: Customer.tsx  Dashboard.tsx  Forbidden.tsx  Login.tsx  NotFound.tsx  Register.tsx  Room.tsx  User.tsx
src/slices/: CustomerFetcher.ts  CustomerSlice.ts  RoomFetcher.ts  RoomSlice.ts  StatSlice.ts  TokenSlice.ts  UserFetcher.ts  UserSlice.ts
src/styles/: _long-shadow.scss  _math.scss  _view-transition.scss  preloader.css
src/types/: chart.ts  customer.ts  index.ts  permission.ts  reponse.ts  room.ts  user.ts  userRole.ts  userToken.ts
