load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ASSET_PATTERNS = [
    "**/*.svg",
    "**/*.css",
    "**/*.scss",
]

SRC_PATTERNS = [
    "**/*.tsx",
    "**/*.ts",
    "**/*.svg",
]

# Filename conventions described at
# https://create-react-app.dev/docs/running-tests#filename-conventions
TEST_PATTERNS = [
    "*.test.tsx",
    "*.test.ts",
    "*.spec.tsx",
    "*.spec.ts",
]

js_library(
    name = "src",
    srcs = glob(ASSET_PATTERNS),
    visibility = ["//visibility:public"],
    deps = [
        ":src_ts",
    ],
)

ts_project(
    name = "src_ts",
    srcs = glob(
        include = SRC_PATTERNS,
        exclude = TEST_PATTERNS,
    ),
    allow_js = True,
    resolve_json_module = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/react",
        "//:node_modules/react-apexcharts",
        "//:node_modules/react-dom",
        "//:node_modules/react-router-dom",
        "//:node_modules/react-icons",
        "//:node_modules/web-vitals",

        "//:node_modules/@chakra-ui/react",
        "//:node_modules/@chakra-ui/theme-tools",
        "//:node_modules/@chakra-ui/icons",
        "//:node_modules/@reduxjs/toolkit",
        "//:node_modules/axios",
        "//:node_modules/axios-hooks",
        "//:node_modules/apexcharts",
        "//:node_modules/dom-confetti",
        "//:node_modules/formik",
        "//:node_modules/react-redux",
        "//:node_modules/yup",
        "//:node_modules/swr",

        "//:node_modules/@types/react",
        "//:node_modules/@types/react-dom",
    ],
    assets = [
      "react-logo.svg",
    ]
)

ts_project(
    name = "src_test_ts",
    srcs = glob(TEST_PATTERNS),
    declaration = True,
    resolve_json_module = True,
    supports_workers = False,  # worker bug on macos: ERROR: react-cra/src/BUILD.bazel:50:11: output 'src/App.test.js' was not created
    tsconfig = "//:tsconfig",
    deps = [
        ":src_ts",
        "//:node_modules/@testing-library/jest-dom",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@types/jest",
    ],
)

jest_test(
    name = "src_test",
    config = "//:jest_config",
    data = [
        ":src",
        ":src_test_ts",
        "//:node_modules/jest-environment-jsdom",
        "//:node_modules/jest-transform-stub",
    ],
    node_modules = "//:node_modules",
)

